# opencode-mastery

./: .gitignore  .memory.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SECURITY_SETUP.md  install.sh  opencode.config.yaml  package.json  pyproject.toml  test-results.md  uninstall.sh
.memory/: transcript-analysis-2026-02-17.md
.memory/daily/: 2026-02-17.md
.opencode/commands/: ace-reflect.md  forget.md  memory.md  recall.md  remember.md  skill-creator-audit.md  skill-creator-create.md  skill-creator-optimize.md  skill-creator-plan.md
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.sisyphus/plans/: standards-system-spec.md
ai_docs/: BACKLOG-FLOW-ANALYZER.md  How to Build SELF-IMPROVING Systems in Claude Code-en.txt  IMPLEMENTATION-FLOW-ANALYZER.md  PROPOSAL-FLOW-ANALYZER.md  ace-agentic-context-engineering.md  prompt-manager-analysis.md  prompt-manager-brainstorm.md  prompt-manager-software-design.md
ai_docs/SEO-SEA/: Claude Code Just Replaced Your Entire SEO Stack - 12 skills Demo-en.txt  Claude Code just replaced your ad agency - here's how-en.txt
ai_docs/memory/: How AI Agents Remember Things-en.txt  ai-agent-memory-architecture.md  how-ai-agents-search-memory.md  openclaw-memory-full-implementation-plan.md  openclaw-memory-implementation-plan.md  openclaw-opencode-ultra-architecture.md
ai_docs/videos/: Why opencode is totally underappreciated-en.txt
docs/: MEMORY_USAGE.md
docs/ace/: framework.md
scripts/: deploy.ts
(+573 files in other folders)
